# django-sqs-celery-example

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
django_sqs_cel/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
home/: admin.py  models.py  tasks.py  utils.py  views.py
home/migrations/: 0001_initial.py
home/templates/home/: home.html
